# filesystemserver

./: LICENSE  README.md  pyproject.toml
filesystemserver/: __init__.py  filesystemserver.py
filesystemserver/data/plugin/fss/: fss.js
filesystemserver/data/plugin/fss/browser/: app.js  index.html  style.css
fsserver/: __init__.py  fsserver.py
fsserver/data/plugin/fss/browser/: app.js
