[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fsserver"
version = "0.0.1"
authors = [
  { name="Nicholas Smith", email="thesmithdynasty@gmail.com" },
]
description = "File System Server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
fss = "fsserver:main"

[project.urls]
Homepage = "https://github.com/nicholashaydensmith/fsserver"
Issues = "https://github.com/nicholashaydensmith/fsserver/issues"
