[project]
name = "filesystemserver"
dynamic = ["version"]
authors = [
  { name="Nicholas Smith", email="thesmithdynasty@gmail.com" },
]
description = "File System Server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'tomli; python_version < "3.11"',
]

[project.scripts]
fss = "filesystemserver:main"

[project.urls]
Homepage = "https://github.com/nicholashaydensmith/filesystemserver"
Issues = "https://github.com/nicholashaydensmith/filesystemserver/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["filesystemserver"]

[tool.hatch.version]
path = "filesystemserver/__init__.py"
